# sales_management_app

./: .gitignore  README.md  pyproject.toml
api/: db.py  insert_data.py  main.py  migrate_db.py  settings.py
api/cruds/: item.py  item_month_sales.py  market.py  market_transfer_amount.py  medium.py  month.py  month_market_commission.py  month_sales_quantity.py  month_summary.py  position.py  reward.py  seller.py  seller_market_reward.py  seller_market_sales.py  total_market_sales.py
api/models/: models.py
api/routers/: item.py  market.py  medium.py  month.py  month_market_commission.py  month_sales_quantity.py  position.py  sales_calculation.py  seller.py
api/schemas/: item.py  market.py  medium.py  month.py  month_market_commission.py  month_sales_quantity.py  month_summary.py  position.py  sales_calculation.py  seller.py
api/validates/: validates.py
db_design/: er.pu
viewer/: README.md  electron-builder.yml  package.json  tsconfig.json
viewer/src/renderer/: index.html
viewer/src/renderer/src/: App.tsx  Header.tsx  settings.ts
viewer/src/renderer/src/AchievementInfo/: AchievementInfo.tsx  MonthMarketCommission.tsx  MonthSalesQuantity.tsx
viewer/src/renderer/src/BasicInfo/: BasicInfo.tsx  Item.tsx  Market.tsx  Medium.tsx  Seller.tsx
viewer/src/renderer/src/Common/: DayjsWithTimezone.ts  YearMonthPicker.tsx
viewer/src/renderer/src/SalesRewardInfo/: MonthSummary.tsx  SalesRewardInfo.tsx
viewer/src/renderer/src/assets/: main.css
